--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "compile": "node compile.js",
     "deploy": "node deploy.js",
-    "deployArtifacts": "node deployArtifacts.js",
+    "server": "node server.js",
+    "server_dev": "nodemon server.js",
     "startChain": "npm i -g ganache && ganache-cli --fork https://mainnet.infura.io/v3/836ecdcc2df247fc8d7732686c8c4537 -p 7345 -a 5"
   },
   "keywords": [],
@@ -13,12 +14,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@openzeppelin/contracts": "4.9.6",
-    "@uniswap/v3-core": "^1.0.1",
-    "@uniswap/v3-periphery": "^1.4.4",
-    "bignumber.js": "^9.1.2",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2"
+    "ethers": "^6.13.2",
+    "express": "^4.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
